k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zenith
  labels:
    name: zenith
